# monadcount-sim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  MonadCountSim.qgz  README.md
.github/workflows/: run-experiments.yml
docs/: grid.shp
geojson/: room.geo.json
include/monadcount_sim/core/: GeoJsonParser.hpp  Scenario.hpp  ScenarioEnvironment.hpp  ScenarioEnvironmentBuilder.hpp  ScenarioFactory.hpp  VisualizationManager.hpp
include/monadcount_sim/factories/pedestrians/: PedestrianFactory.hpp  RandomWalkDoorPedestrianFactory.hpp
include/monadcount_sim/factories/terminals/: TerminalFactory.hpp
include/monadcount_sim/models/: Category.hpp  Feature.hpp  Geometry.hpp  PointGeometry.hpp  PolygonGeometry.hpp
include/monadcount_sim/wifi/: RssiBasedAssocManager.hpp
src/: main.cpp
src/core/: CMakeLists.txt  GeoJsonParser.cpp  GeoJsonParser.hpp  Scenario.cpp  Scenario.hpp  ScenarioEnvironment.hpp  ScenarioEnvironmentBuilder.cpp  ScenarioEnvironmentBuilder.hpp  ScenarioFactory.cpp  ScenarioFactory.hpp  VisualizationManager.cpp
src/experiments/: BasicExperiment.cpp  BasicExperiment.hpp  CMakeLists.txt  DoorToDoorExperiment.cpp  DoorToDoorExperiment.hpp  GaussMarkovHandoverExperiment.cpp  GaussMarkovHandoverExperiment.hpp  HandoverExperiment.cpp  HandoverExperiment.hpp
src/factories/: CMakeLists.txt
src/factories/pedestrians/: CMakeLists.txt  PedestrianFactory.hpp  RandomWalkDoorPedestrianFactory.cpp  RandomWalkDoorPedestrianFactory.hpp
src/factories/terminals/: TerminalFactory.hpp
src/models/: Category.hpp  Feature.hpp  Geometry.hpp  PointGeometry.hpp  PolygonGeometry.hpp  README.md
src/wifi/: CMakeLists.txt  RssiBasedAssocManager.cpp
